app/design/frontend/Shop/hh/web/css/main.less
/* ... */
/* ==========================================================================
Footer
========================================================================== */
.page-footer {
  padding-top: 30px;
  padding-bottom: 30px;
  background: #e6e6e7;
  font: normal 11px/11px 'Montserrat', Helvetica, Arial, sans-serif;
  overflow: auto;

  a:hover {
    text-decoration: underline;
  }

}

.footer-links li {
  display: block;
  padding: 5px 0;
  list-style: none;
  white-space: nowrap;
  a {
    font-family: @baseFont;
  }
}

.footer-links ul {
}

.footer-logo {
  font-family: @baseFont;
  p {
    margin-bottom: 0;
  }
  .copyright {
    .block;
    margin-top: 10px;
  }
}

.footer-social {
  font-size: 13px;
  text-transform: uppercase;

  a {
    color: #6b6b6b;
  }

  ul {
    margin-top: 10px;
  }
}

div.mage-error[generated] {
  font-size: 14px;
}

/* ==========================================================================
Flexbox - Rows
========================================================================== */
.row.is-flex {
  display: flex;
  flex-wrap: wrap;
}
.row.is-flex > [class*='col-'] {
  display: flex;
  flex-direction: column;
}

.row.is-flex {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.row.is-flex > [class*='col-'] {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

/* ==========================================================================
No margin hack
========================================================================== */
.row.no-gutters {
  margin-right: 0;
  margin-left: 0;
}
.row.no-gutters > [class^="col-"],
.row.no-gutters > [class*=" col-"] {
  padding-right: 0;
  padding-left: 0;
}

/* ==========================================================================
CSS Overwrites (Blank Theme)
========================================================================== */
.header.content {
  padding: 0!important;
}

.navigation, .breadcrumbs, .page-header .header.panel, .header.content, .footer.content, .page-wrapper > .widget, .page-wrapper > .page-bottom, .block.category.event, .top-container, .page-main {
  padding: 0!important;
  max-width: inherit!important;
}

.page-layout-1column .product-info-main, .page-layout-1column .product.media {
  float: none!important;
  width: 100%!important;
}


fieldset {
  letter-spacing: none!important;
}

.toolbar {
  padding: 0!important;
  margin: 0!important;
  margin-bottom: 10px!important;
  text-align: left;
}



.product-item-listing:nth-child(4n+1) {
  clear: both;
}


.abs-margin-for-forms-desktop, .fieldset .legend, .column:not(.sidebar-main) form .actions-toolbar, .column:not(.sidebar-additional) form .actions-toolbar, .login-container .fieldset:after {
  margin: 0!important;
}

.table > thead > tr > th, .table > tbody > tr > th, .table > tfoot > tr > th, .table > thead > tr > td, .table > tbody > tr > td, .table > tfoot > tr > td {
  line-height: inherit;
}



/* ==========================================================================
Dashboard Fixes
 ========================================================================== */
.block-dashboard-info,
.block-dashboard-addresses {
  .box-title {
    font-size: 14px;
    margin-bottom: 15px;
    margin: 10px 0;
    display: block;
    text-transform: uppercase;
  }
  a {
    color: #848484;
    text-decoration: underline;
  }
}
.block-main-title {
  margin-bottom: 20px;
  font-size: 22px;
  margin-bottom: 20px;
  padding-bottom: 15px;
  border-bottom: 1px solid #ababab;
  font-family: @fancyFont;
  font-style: italic;
  font-size: 22px;
}


.login-container {
  margin-top: 40px;
}

.block .block-title {
    font-size: 22px;
    font-family: @fancyFont;
    font-style: italic;
    .relative;
    border-bottom: 1px solid #e8e8e8;
    margin-bottom: 15px;
    padding-bottom: 12px;
    line-height: 26px;
}

.login-container .block .block-title {
  font-size: 22px;
}

.login-container .block .block-title strong {
  font-weight: normal;
}

.login-container .fieldset:after {
  font-size: 13px;
}

.account-nav {
  .content {
    background-color: transparent;
    padding: 0;
  }
  .item {
    margin: 0;
    font-size: 12px;
    text-transform: uppercase;
    font-weight: bold;
    font-family: @headlineFont;
    border-bottom: 1px solid rgba(0,0,0,0.1);
  }

  .item:first-child {
    border-top: 1px solid rgba(0,0,0,0.1);
  }

  ._has-datepicker ~ .ui-datepicker-trigger > span {
    .none;
  }
}

.block-reviews-dashboard {
  .product-name {
    font-family: @headlineFont;
    font-size: 14px;
  }
}

.account {
  .page-title-wrapper {
    margin-bottom: 40px;
  }

  .legend {
    font-size: 22px;
    margin-bottom: 20px;
    padding-bottom: 12px;
    border-bottom: 1px solid #e8e8e8;
  }

  .count {
    float: right;
    font-family: @baseFont;
    font-style: normal;
    font-size: 14px;
  }
}

.customer-account-create .social-login-authentication-channel {
  margin-top: 25px;
}



/* ==========================================================================
Quick View
 ========================================================================== */
.mfp-iframe-holder .mfp-close {
  height: 35px;
  width: 35px!important;
  display: block;
  color: #000;
  line-height: 35px;
}

.mfp-image-holder .mfp-close, .mfp-iframe-holder .mfp-close {
  padding: 0;
}



.primary-cart-btn, .weltpixel_quickview_button_v2 {
  display: inline-block;
  background-color: #666;
  height: 40px;
  width: 40px;
  line-height: 40px;
  border-radius: 50%;
  color: #FFF;
  margin: 0 2px;
  transition: 0.3s all;

  &:hover {
    background-color: #000!important;
    cursor: pointer;
  }
}

.wishlist-btn {
  display: inline-block;
}
/* ... */

